--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: .
     ports:
       - "9000:9000"
+    restart: always
     environment:
       - ADDR=:9000
       - CLICKHOUSE_ADDR=clickhouse:9000
@@ -11,11 +12,14 @@ services:
       - JWT_SECRET=secret
       - JWT_DURATION=15m
       - REFRESH_DURATION=720h
+    volumes:
+      - "./frontend:/frontend"
     depends_on:
       - clickhouse
 
   clickhouse:
     image: yandex/clickhouse-server
+    restart: always
     ulimits:
       nofile:
         soft: 262144
@@ -26,4 +30,15 @@ services:
       - "./configs/users.xml:/etc/clickhouse-server/users.d/users.xml:ro"
       - "./configs/init.sql:/docker-entrypoint-initdb.d/init.sql:ro"
 
+  nginx:
+    image: nginx
+    restart: always
+    ports:
+      - "80:80"
+    volumes:
+      - "./configs/nginx.conf:/etc/nginx/nginx.conf:ro"
+      - "./static:/var/nginx/static"
+    command: ["nginx", "-g", "daemon off;"]
+    depends_on:
+      - server
 
