--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -10,8 +10,17 @@ http {
   include /etc/nginx/mime.types;
 
   server {
-    listen        80;
+    listen *:80;
+    location / {
+      rewrite ^(.*)$ https://itmo.sinketsu.ru$1 permanent;
+    }
+  }
+
+  server {
+    listen        443 ssl;
     server_name   itmo.sinketsu.ru;
+    ssl_certificate     /certs/fullchain.pem;
+    ssl_certificate_key /certs/privkey.pem;
 
     location / {
       proxy_pass http://server:9000;
