Add rate limit to /signin

--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -8,6 +8,7 @@ events {
 
 http {
   include /etc/nginx/mime.types;
+  limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
 
   server {
     listen *:80;
@@ -27,6 +28,15 @@ http {
       proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /signin {
+      proxy_pass http://server:9000;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Real-IP $remote_addr;
+
+      limit_req zone=mylimit;
     }
 
     location /static {
